--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Uu]ser[Ss]ettings/
+/HowToMakeAVideoGame/[Ll]ibrary/
+/HowToMakeAVideoGame/[Tt]emp/
+/HowToMakeAVideoGame/[Oo]bj/
+/HowToMakeAVideoGame/[Bb]uild/
+/HowToMakeAVideoGame/[Bb]uilds/
+/HowToMakeAVideoGame/[Ll]ogs/
+/HowToMakeAVideoGame/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
